[package]
name = "las-terrain-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
las = { version = "0.9", features = ["laz"] }
kiddo = "5.2.2"
exr = "1.73.0"
libblur = "0.20.0"
clap = { version = "4.5.48", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["blocking"] }
itertools = "0.14.0"
rand = "0.8.5"